--- a/app/views/welcome/_favourite_rooms.html.erb
+++ b/app/views/welcome/_favourite_rooms.html.erb
@@ -1,41 +1,29 @@
 <div class="favorite-rooms content-area clearfix">
     <div class="container">
         <div class="main-title">
-            <h1>Favorite Rooms</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ac tortor at tellus feugiat congue quis ut nunc. Semper ac dolor vitae accumsan. interdum hendrerit lacinia.</p>
+            <h1>Hotel Features</h1>
         </div>
         <div class="row">
+
             <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                <!-- Rooms Box Start-->
                 <div class="thumbnail rooms-box clearfix">
-                    <%= image_tag("bedroom-1.jpg")%>
-                    <!-- detail -->
+                    <%= image_tag "139-rooms-and-more.jpg", class: "specifics-thumbnails" %>
                     <div class="caption detail">
-                        <!-- Header -->
                         <header class="clearfix">
-                            <div class="pull-left">
-                                <h5 class="title">
-                                    <a href="http://hotel-empire.sohelrana.me/rooms-details.html">King Suite</a>
-                                </h5>
-                                <ul class="custom-list">
-                                    <li>
-                                        <a href="http://hotel-empire.sohelrana.me/#">1 bed</a> /
-                                    </li>
-                                    <li>
-                                        <a href="http://hotel-empire.sohelrana.me/#">2 People</a> /
-                                    </li>
-                                    <li>
-                                        <a href="http://hotel-empire.sohelrana.me/#">sea  view</a> 
-                                    </li>
-                                </ul>
-                            </div>
-                            <!-- Price -->
-                            <div class="price">
-                                <span>from $99/day</span>
-                            </div>
-                       </header>
+                            <h5 class="title ">
+                                <a href="#" class="">139 ROOMS AND MORE</a>
+                            </h5>
+                            <ul class="custom-list">
+                                <li>
+                                    <a href="#">139 rooms</a> /
+                                </li>
+                                <li>
+                                    <a href="#">amenity space</a> /
+                                </li>
+                            </ul>
+                        </header>
                         <!-- Paragraph -->
-                        <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back.</p>
+                        <p>Hotel at Rock Lititz will feature 139 rooms, plus additional amenity space throughout the beautiful 92,000 sq ft building.</p>
                         <!-- Facilities List -->
                         <ul class="facilities-list clearfix">
                             <li>
@@ -63,51 +51,136 @@
                                 <span>TV</span>
                             </li>
                         </ul>
-                        <!-- Btn Div-->
-                        <div class="btn-div">
-                            <a href="http://hotel-empire.sohelrana.me/rooms-details.html">
-                                <span class="read-more">Ream More</span>
-                                <span class="icon-arrow-right2 bg-danger">
-                                    <i class="fa  fa-angle-right"></i>
-                                </span>
-                            </a>
-                        </div>
                     </div>
                 </div>
-                <!-- Rooms Box End-->
             </div>
+
             <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                <!-- Rooms Box Start-->
                 <div class="thumbnail rooms-box clearfix">
-                    <%= image_tag("bedroom-2.jpg")%>
-                    <!-- detail -->
+                    <%= image_tag "kings-&-queens.jpg", class: "specifics-thumbnails"%>
                     <div class="caption detail">
-                        <!-- Header -->
+                        <header class="clearfix">
+                            <h5 class="title">
+                                <a href="#">KINGS & QUEENS</a>
+                            </h5>
+                            <ul class="custom-list">
+                                <li>
+                                    <a href="#">82 King Beds</a> /
+                                </li>
+                                <li>
+                                    <a href="#">40 double queens</a> /
+                                </li>
+                            </ul>
+                       </header>
+                        <!-- Paragraph -->
+                        <p>Hotel at Rock Lititz will include 82 king beds and 40 double queens, spread over 5 floors - enough space to sleep multiple productions, clients and tourists alike!</p>
+                        <!-- Facilities List -->
+                        <ul class="facilities-list clearfix">
+                            <li>
+                                <i class="flaticon-air-conditioner"></i>
+                                <span>Ac</span>
+                            </li>
+                            <li>
+                                <i class="flaticon-air-conditioner"></i>
+                                <span>Room Service</span>
+                            </li>
+                            <li>
+                                <i class="flaticon-wifi"></i>
+                                <span>Wifi Access</span>
+                            </li>
+                            <li>
+                                <i class="flaticon-key"></i>
+                                <span>Free Safe </span>
+                            </li>
+                            <li>
+                                <i class="flaticon-car-parking"></i>
+                                <span>Parking</span>
+                            </li>
+                            <li>
+                                <i class="flaticon-monitor"></i>
+                                <span>TV</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                <div class="thumbnail rooms-box clearfix">
+                    <%= image_tag "various-suites.jpg", class: "specifics-thumbnails" %>
+                    <div class="caption detail">
+                        <header class="clearfix">
+                            <h5 class="title">
+                                <a href="#">VARIOUS SUITES</a>
+                            </h5>
+                            <ul class="custom-list">
+                                <li>
+                                    <a href="#">15 suites</a> /
+                                </li>
+                                <li>
+                                    <a href="#">2 penthouse suites</a> /
+                                </li>
+                            </ul>                           
+                       </header>
+                        <!-- Paragraph -->
+                        <p>In addition to our standard rooms, 15 extended stay suites for our longest staying guests. And, of course, 2 penthouse suites, fit for any of our VIPs.</p>
+                        <!-- Facilities List -->
+                        <ul class="facilities-list clearfix">
+                            <li>
+                                <i class="flaticon-air-conditioner"></i>
+                                <span>Ac</span>
+                            </li>
+                            <li>
+                                <i class="flaticon-air-conditioner"></i>
+                                <span>Room Service</span>
+                            </li>
+                            <li>
+                                <i class="flaticon-wifi"></i>
+                                <span>Wifi Access</span>
+                            </li>
+                            <li>
+                                <i class="flaticon-key"></i>
+                                <span>Free Safe </span>
+                            </li>
+                            <li>
+                                <i class="flaticon-car-parking"></i>
+                                <span>Parking</span>
+                            </li>
+                            <li>
+                                <i class="flaticon-monitor"></i>
+                                <span>TV</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                <div class="thumbnail rooms-box clearfix">
+                    <#%= image_tag "kings-&-queens.jpg", class: "specifics-thumbnails"%>
+                    <div class="caption detail">
                         <header class="clearfix">
                             <div class="pull-left">
                                 <h5 class="title">
-                                    <a href="http://hotel-empire.sohelrana.me/rooms-details.html">King Suite</a>
+                                    <a href="#">KINGS & QUEENS</a>
                                 </h5>
                                 <ul class="custom-list">
                                     <li>
-                                        <a href="http://hotel-empire.sohelrana.me/#">1 bed</a> /
+                                        <a href="#">1 bed</a> /
                                     </li>
                                     <li>
-                                        <a href="http://hotel-empire.sohelrana.me/#">2 People</a> /
+                                        <a href="#">2 People</a> /
                                     </li>
                                     <li>
-                                        <a href="http://hotel-empire.sohelrana.me/#">sea  view</a> 
+                                        <a href="#">sea  view</a> 
                                     </li>
                                 </ul>
                             </div>
-                            <!-- Price -->
                             <div class="price">
                                 <span>from $99/day</span>
                             </div>
                        </header>
-                        <!-- Paragraph -->
                         <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back.</p>
-                        <!-- Facilities List -->
                         <ul class="facilities-list clearfix">
                             <li>
                                 <i class="flaticon-air-conditioner"></i>
@@ -134,7 +207,6 @@
                                 <span>TV</span>
                             </li>
                         </ul>
-                        <!-- Btn Div-->
                         <div class="btn-div">
                             <a href="http://hotel-empire.sohelrana.me/rooms-details.html">
                                 <span class="read-more">Ream More</span>
@@ -145,79 +217,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- Rooms Box End-->
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                <!-- Rooms Box Start-->
-                <div class="thumbnail rooms-box clearfix">
-                    <%= image_tag("bedroom-3.jpg")%>
-                    <!-- detail -->
-                    <div class="caption detail">
-                        <!-- Header -->
-                        <header class="clearfix">
-                            <div class="pull-left">
-                                <h5 class="title">
-                                    <a href="http://hotel-empire.sohelrana.me/rooms-details.html">King Suite</a>
-                                </h5>
-                                <ul class="custom-list">
-                                    <li>
-                                        <a href="http://hotel-empire.sohelrana.me/#">1 bed</a> /
-                                    </li>
-                                    <li>
-                                        <a href="http://hotel-empire.sohelrana.me/#">2 People</a> /
-                                    </li>
-                                    <li>
-                                        <a href="http://hotel-empire.sohelrana.me/#">sea  view</a> 
-                                    </li>
-                                </ul>
-                            </div>
-                            <!-- Price -->
-                            <div class="price">
-                                <span>from $99/day</span>
-                            </div>
-                       </header>
-                        <!-- Paragraph -->
-                        <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back.</p>
-                        <!-- Facilities List -->
-                        <ul class="facilities-list clearfix">
-                            <li>
-                                <i class="flaticon-air-conditioner"></i>
-                                <span>Ac</span>
-                            </li>
-                            <li>
-                                <i class="flaticon-room-service"></i>
-                                <span>Room Service</span>
-                            </li>
-                            <li>
-                                <i class="flaticon-wifi"></i>
-                                <span>Wifi Access</span>
-                            </li>
-                            <li>
-                                <i class="flaticon-key"></i>
-                                <span>Free Safe </span>
-                            </li>
-                            <li>
-                                <i class="flaticon-car-parking"></i>
-                                <span>Parking</span>
-                            </li>
-                            <li>
-                                <i class="flaticon-monitor"></i>
-                                <span>TV</span>
-                            </li>
-                        </ul>
-                        <!-- Btn Div-->
-                        <div class="btn-div">
-                            <a href="http://hotel-empire.sohelrana.me/rooms-details.html">
-                                <span class="read-more">Ream More</span>
-                                <span class="icon-arrow-right2 bg-danger">
-                                    <i class="fa  fa-angle-right"></i>
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Rooms Box End-->
-            </div>
+            </div> -->
+
         </div>
     </div>
 </div>
