--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.carousel-inner {
+  height: 600px;
+}
+
+.specifics-thumbnails {
+  height: 225px !important;
+  width: 100%
+}
+
+.amenities .rooms-box .detail {
+	float: none;
+    text-align-last: center;
+}
+
+.amenities .rooms-box .detail header {
+	padding-bottom: 0; 
+    margin-bottom: 0; 
+    width: 100%; 
+    border-bottom: 0px solid #ededed;
+}
