--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,106 +1,5 @@
-<body cz-shortcut-listen="true">
-<!-- Header Start -->
-<header class="main-header">
-    <div class="container">
-        <nav class="navbar navbar-default">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                </button>
-                <a href="#" class="logo">
-                    <%= image_tag("logo_3.png")%>
-                </a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a onclick="featured_it('#short-intro-inner')" href="#">ACCOMMODATIONS</a></li>
-                    <li><a id="AMENITIES" href="#">AMENITIES</a></li>
-                    <li><a id="DINING" href="#">DINING</a></li>
-                    <li><a id="WEDDING" href="#">WEDDING & EVENTS</a></li>
-                    <li><a id="About" href="#">About Us</a></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-            <!-- /.container -->
-        </nav>
-    </div>
-</header>
-<!-- Header End -->
 
-<!-- Banner Start-->
-<div class="banner">
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-            <div class="item item-1">
-                <div class="container">
-                    <!-- Banner Slider Inner 1 -->
-                    <div class="banner-slider-inner">
-                        <!-- Titel-->
-                        <h1><span>Welcome to</span> Rock Lititz</h1>
-                        <!-- Paragraph -->
-                        <p>Our 138 rooms and suites are wonderfully comfortable with a sleek décor.</p>
-                        <!-- Btn -->
-                        <!-- <a href="rooms-list.html" class="btn btn-fill">view all rooms</a> -->
-                    </div>
-                </div>
-            </div>
-            <div class="item item-2">
-                <div class="container">
-                    <!-- Banner Slider Inner 1 -->
-                    <div class="banner-slider-inner">
-                        <!-- Titel-->
-                        <h1><span>It's time to </span> relax!</h1>
-                        <!-- Paragraph -->
-                        <p>More great experience than hotel Both a destination and a journey</p>
-                        <!-- Btn -->
-                        <!-- <a href="service.html" class="btn btn-fill">view our services</a> -->
-                    </div>
-                </div>
-            </div>
-            <div class="item item-3 active">
-                <div class="container">
-                    <!-- Banner Slider Inner 1 -->
-                    <div class="banner-slider-inner">
-                        <!-- Titel-->
-                        <h1><span>It's time to </span> feel!</h1>
-                        <!-- Paragraph -->
-                        <p>More great experience than hotel Both a destination and a journey</p>
-                        <!-- Btn -->
-                        <!-- <a href="rooms-list.html" class="btn btn-fill">view our services</a> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="slider-mover-left" aria-hidden="true">
-                <%= image_tag("chevron-left.png")%>
-            </span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="slider-mover-right" aria-hidden="true">
-                <%= image_tag("chevron-right.png")%>
-            </span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-
-    <!-- Search Bar Start -->
-    <!-- <#%= render partial: "search_bar"%> -->
-    <!--/ Search Bar End -->
-</div>
-<!-- Banner End-->
-
-<!-- Recent Rooms Start-->
-    <!-- <#%= render partial: "favourite_rooms"%> -->
-<!-- Recent Rooms End-->
-
+<%= render partial: "banner" %>
 <!-- Short Intro Start-->
 <div class="short-intro">
     <div class="container">
@@ -110,7 +9,7 @@
             <span class="crown"><i class="flaticon-royalty-crown"></i></span>
             <h1><span>Coming Soon!</span></h1>
 
-            <p>The Rock Lititz hotel is proud to join the Lititz community and enhance the offerings of this innovative creative area!  Nestled between beautiful views of amazing farmland & minutes from "America's coolest small town" the Rock Lititz hotel features 138 beautifully appointed modern guest rooms with blend of a backstage pass experience while respecting the industry of art & farming around the community.</p>
+            <p>The Rock Lititz hotel is proud to join the Lititz community and enhance the offerings of this innovative creative area!  Nestled between beautiful views of amazing farmland & minutes from "America's coolest small town" the Rock Lititz hotel features 139 beautifully appointed modern guest rooms with blend of a backstage pass experience while respecting the industry of art & farming around the community.<br/>The projected opening for Hotel at Rock Lititz is currently fall of 2018. Located on the innovative Rock Lititz Campus, Hotel at Rock Lititz will be your VIP pass to a backstage experience!</p>
 
 <!--             <div class="short-intro-item-image">
                 <img src="./Hotel Empire - Hotel Reservation HTML Template_files/spa.png" class="img-responsive" alt="group-pic">
@@ -120,231 +19,33 @@
 </div>
 <!-- Short Intro End-->
 
-<!-- Hotel Service-2 Start-->
-<div class="hotel-service-2">
+<!-- Recent features Start-->
+    <%= render partial: "features"%>
+<!-- Recent features End-->
+
+<!-- Hotel fun-facts Start-->
+    <%= render partial: "fun_facts" %>
+<!-- Hotel fun-facts End-->
+
+
+
+
+<!-- <div class="favorite-rooms content-area clearfix">
     <div class="container">
         <div class="main-title">
-            <h1>Our Special Facilities</h1>
-            <p>Business and leisure travelers will love relaxing at our pool that opens to an outdoor patio, keeping up with workouts in our state of the art fitness center and unwinding in spacious guest rooms with modern amenities but a one-of-a-kind feel of urban rustic modern flair.</p>
+            <h1>GET YOUR</h1>
         </div>
-        <div class="row mgn-btm">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="flaticon-home"></i>
-                    <h4>Boutique Hotel</h4>
-                    <!-- <p>A deeply personalised spa experience over 15,000 square feet of the ultimate in luxury and tranquility.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="fa fa-bed" aria-hidden="true"></i>
-                    <h4>138 Rooms</h4>
-                    <!-- <p>A deeply personalised spa experience over 15,000 square feet of the ultimate in luxury and tranquility.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="fa fa-cutlery" aria-hidden="true"></i>
-                    <h4>Restaurant + bar</h4>
-                    <!-- <p>No holiday is complete without exploring the world beneath the water surrounding Hotel Empire.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="flaticon-students-couple-full-body-view"></i>
-                    <h4>Weddings &amp; Honeymoons</h4>
-                    <!-- <p>Dedicated wedding planner, pre wedding spa treatments, ceremony on the beach or in villa.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="row mgn-btm">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="fa fa-users" aria-hidden="true"></i>
-                    <h4>All Ages Welcome</h4>
-                    <!-- <p>A deeply personalised spa experience over 15,000 square feet of the ultimate in luxury and tranquility.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="fa fa-calendar-check-o" aria-hidden="true"></i>
-                    <h4>Open all year</h4>
-                    <!-- <p>A deeply personalised spa experience over 15,000 square feet of the ultimate in luxury and tranquility.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="flaticon-waterpolo"></i>
-                    <h4>Pool</h4>
-                    <!-- <p>No holiday is complete without exploring the world beneath the water surrounding Hotel Empire.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="flaticon-air-conditioner"></i>
-                    <h4>Air Conditioning</h4>
-                    <!-- <p>Dedicated wedding planner, pre wedding spa treatments, ceremony on the beach or in villa.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="row mgn-btm">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="fa fa-paw" aria-hidden="true"></i>
-                    <h4>Pet Friendly</h4>
-                    <!-- <p>A deeply personalised spa experience over 15,000 square feet of the ultimate in luxury and tranquility.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="flaticon-car-parking"></i>
-                    <h4>Off-street Parking</h4>
-                    <!-- <p>A deeply personalised spa experience over 15,000 square feet of the ultimate in luxury and tranquility.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="flaticon-wifi"></i>
-                    <h4>WiFi</h4>
-                    <!-- <p>No holiday is complete without exploring the world beneath the water surrounding Hotel Empire.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="flaticon-hot-coffee-cup-with-hearts"></i>
-                    <h4>Lobby</h4>
-                    <!-- <p>Dedicated wedding planner, pre wedding spa treatments, ceremony on the beach or in villa.</p> -->
-                </div>
-            </div>
-        </div>
-        <div class="row mgn-btm">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="flaticon-room-service"></i>
-                    <h4>Restaurant</h4>
-                    <!-- <p>Dedicated wedding planner, pre wedding spa treatments, ceremony on the beach or in villa.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="flaticon-exercise"></i>
-                    <h4>Fitness Facilities</h4>
-                    <!-- <p>A deeply personalised spa experience over 15,000 square feet of the ultimate in luxury and tranquility.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="flaticon-massage"></i>
-                    <h4>Unique Spa Experience</h4>
-                    <!-- <p>A deeply personalised spa experience over 15,000 square feet of the ultimate in luxury and tranquility.</p> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <i class="flaticon-operator"></i>
-                    <h4>24/7 Customer Support</h4>
-                    <!-- <p>No holiday is complete without exploring the world beneath the water surrounding Hotel Empire.</p> -->
-                </div>
-            </div>
-        </div>
-        <!-- <a href="#" class="btn btn-fill">Read More</a> -->
-    </div>
-</div>
-<!-- Hotel Service-2 End-->
-
-<!-- Hotel Service-1 Start-->
-<div class="hotel-service-1">
-    <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <h5>Stimulate Your Senses</h5>
-                    <h3>A Harmony Of Flavours</h3>
-                    <p>A favorite haunt for savvy locals and refined travelers alike, the Hotel Rock Lititz boasts diverse options for dining and.</p>
-                    <p>&nbsp;</p>
-
-                    <h5>Spark The Imagination </h5>
-                    <h3>Explore The Farming Life</h3>
-                    <p>Nestled between beautiful views of amazing farmland & minutes from America's coolest small town</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="content">
-                    <h5>Suite Amenities Experience</h5>
-                    <h3>Restore Your Well-Being </h3>
-                    <p>A deeply personalised experience of the ultimate in luxury and tranquility.</p>
-                    <p>&nbsp;</p>
-
-                    <h5>Weddings &amp; Honeymoons </h5>
-                    <h3>Your Dream Wedding </h3>
-                    <p>Dedicated wedding planner, pre wedding spa treatments, ceremony in Hall.</p>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                <div class="home-chef">
-                    <%= image_tag "home-chef.jpg", class: "img-responsive", alt: "home-chef" %>
+            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+                <div class="">
+                    <a href="https://drive.google.com/a/devsinc.com/file/d/0Bz6Y45eCSBbZNjJzSFZWMXlMN3M1S1ozUm1JY29ka0M5SmdF/view?usp=sharing">
+                        <#%= image_tag "vip-pass.jpg", class: "specifics-thumbnails" %>
+                    </a> 
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Hotel Service-1 End-->
-
-
-
-<!-- Special Service Start-->
-<div class="special-service">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4  col-md-4 col-sm-6 col-xs-12 content">
-                <h5>Dining Room</h5>
-                <h3>Get Ready for the Delicious Dinner</h3>
-                <p>Spark your imagination and your taste buds with these inspirational recipes from famous Cookware and our favorite chefs. We've rounded up our most-popular main dishes, sides and salads - here's what you want to eat for dinner right now.</p>
-                <!-- <a href="#" class="btn btn-fill">Read More</a> -->
-            </div>
-            <div class="col-lg-8 col-md-8 col-sm-6 col-xs-12 special-service-img">
-                <%= image_tag "dinner.jpg", class: "img-responsive", alt: "home-chef" %>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Special Service End-->
-
-<!-- Special Service-event Start-->
-<div class="special-service">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-8 col-sm-6 col-xs-12 special-service-img">
-                <%= image_tag "wedding.jpg", class: "img-responsive", alt: "home-chef" %>
-            </div>
-            <div class="col-lg-4  col-md-4 col-sm-6 col-xs-12 content">
-                <h5>Event Hall</h5>
-                <h3>Create History With Wedding Venue</h3>
-                <p>Celebrate your special day in the same spaces where presidents and dignitaries once gathered.  Our Grand Ballroom offers classic charm and a truly unique wedding experience.</p>
-                <!-- <a href="#" class="btn btn-fill">Read More</a> -->
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Special Service event End-->
-
-<!-- Special Service Lobby Start-->
-<div class="special-service">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4  col-md-4 col-sm-6 col-xs-12 content">
-                <h5>Lobby</h5>
-                <h3>Lobby Bar And Restuarant An Ultra Sophisticated</h3>
-                <p>The hotel will feature a lobby that will be a favorite space to gather.  An area of mingling with game tables, stage for impromptu jam sessions, multiple televisions with behind the scene looks at your favorite shows as well as a full restaurant offering breakfast, dinner and drinks daily.</p>
-                <!-- <a href="#" class="btn btn-fill">Read More</a> -->
-            </div>
-            <div class="col-lg-8 col-md-8 col-sm-6 col-xs-12 special-service-img">
-                <%= image_tag "lobby_tagline.png", class: "img-responsive", alt: "home-chef" %>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Special Service Lobby End-->
+</div> -->
 
 
 <!-- Testimonials Start-->
@@ -357,8 +58,8 @@
         <div class="row">
             <div class="col-md-3 col-sm-6 footer-item clearfix">
                 <div class="footer-item-content">
-                     <a href="#" class="logo">
-                        <%= image_tag("logo_3.png")%>
+                     <a href="<%=root_path%>" class="logo">
+                        <%= image_tag "logo.png" %>
                      </a>
                     <div class="clearfix"></div>
                     <!-- paragraph-->
